--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ wp-content/debug.log
 wp-content/php-errors.log
 wp-content/object-cache.php
 wp-content/plugins/hello.php
+elementor-template-sync-manager/.DS_Store
+MM Slides/.DS_Store
+ss-git-sync/.DS_Store
+wc-product-compare/icons/.DS_Store
