Updated filter css

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ elementor-template-sync-manager/.DS_Store
 MM Slides/.DS_Store
 ss-git-sync/.DS_Store
 wc-product-compare/icons/.DS_Store
+ss-git-sync/.DS_Store
